--- a/src/styles.css
+++ b/src/styles.css
@@ -9,13 +9,23 @@
     --cambridge: rgb(115, 174, 135);
     --amber: rgb(225, 191, 0);
     --platinum: rgb(229, 228, 226);
+    --moonglow: rgb(182, 205, 209);
 
-    /* fonts */
     --KodeMono: "Kode Mono";
-    --Lebedev: "Sergej Lebedev";
+    --Anta: "Anta";
 }
 
-
+.kode-mono-<uniquifier> {
+    font-family: "Kode Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+  }
+.anta-regular {
+    font-family: "Anta", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 a {
     margin: 0;
@@ -31,7 +41,7 @@ ul > * {
 }
 h1 {
     font-size: 2.5rem;
-    font-family: var(--Lebedev);
+    font-family: var(--Anta);
 }
 h2 {
     font-size: 2rem;
@@ -54,38 +64,14 @@ body {
     margin: 1rem;
 }
 
-
-
 header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
+    display: block;
+    height: 5rem;
+}
+.nameTag {
+    font-family: var(--Anta);
     color: var(--cambridge);
 }
-.name1 {
-    padding: 0 0 0.75rem 0;
-}
-.def1 {
-    margin: 1.5rem 0 0 0;
-}
-.anthony {
-    padding: 0 1rem 0 0;
-    text-align: right;
-    margin: 0 0 1.5rem 0;
-}
-.name2 {
-    padding: 0 0 0.25rem 0;
-}
-.def2 {
-    padding-top: 0.5rem;
-}
-.cap1, .cap2 {
-    font-size: 0.75rem;
-}
-
-/* MOBILE DEF : only displays if(screen.width<699px) */
-/* see @media only screen and (max-width: 699px) */
 
 nav {
     justify-content: center;
@@ -114,18 +100,5 @@ nav {
 
 } */
 
-@media only screen and (max-width: 599px) {
-    .header {
-        margin: 1rem 1rem 0 1rem;
-    }
-    header > * {
-        max-height: 3rem
-    }
-    .anthony {
-        text-align: left;
-    }
-    .def2 {
-        padding: 1.5rem 0 0 0;
-        text-align: right;
-    }
-}
+/* @media only screen and (max-width: 599px) {
+} */
