--- a/src/styles.css
+++ b/src/styles.css
@@ -15,10 +15,10 @@
     --Anta: "Anta";
 }
 
-.kode-mono-<uniquifier> {
+.kode-mono {
     font-family: "Kode Mono", monospace;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    font-weight: 400;
     font-style: normal;
   }
 .anta-regular {
@@ -66,11 +66,13 @@ body {
 
 header {
     display: block;
-    height: 5rem;
 }
-.nameTag {
+.nametag {
     font-family: var(--Anta);
-    color: var(--cambridge);
+    color: var(--amber);
+    text-align: center;
+
+    user-select: none;
 }
 
 nav {
@@ -96,6 +98,8 @@ nav {
     border: 0.05rem solid var(--amber);
     border-radius: 0.15rem;
 }
+
+
 /* @media only screen and (min-width: 700px) {
 
 } */
