--- a/src/styles.css
+++ b/src/styles.css
@@ -65,8 +65,17 @@ body {
 }
 
 header {
-    display: block;
-    margin: 0 0 1.5rem 0;
+    display: flex;
+    margin: 0 0 2rem 0;
+    align-items: center;
+}
+.profContainer {
+    max-height: 5rem;
+    padding: 0 0 0 0.5rem;
+}
+.profContainer > img {
+    max-height: 6rem;
+    margin: 0 5rem 0 0;
 }
 .nametag {
     font-family: var(--Anta);
@@ -74,6 +83,18 @@ header {
     text-align: center;
 
     user-select: none;
+}
+.subline {
+    display: flex;
+}
+.subline > * {
+    color: var(--cambridge);
+}
+.aka {
+    margin: 0 1rem 0 0;
+}
+.anthony {
+    margin: 0 1rem 0 0;
 }
 
 nav {
