socials logos added to file directory

--- a/src/styles.css
+++ b/src/styles.css
@@ -90,6 +90,7 @@ header > * {
 }
 .subline > * {
     color: var(--cambridge);
+    font-family: var(--KodeMono);
 }
 .aka {
     margin: 0 1rem 0 0;
