--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,8 @@
 
 
 
+
+/* GLOBALS */
 a {
     margin: 0;
     padding: 0;
@@ -40,6 +42,11 @@ a {
 ul > * {
     text-decoration: none;
     list-style: none;
+    user-select: none;
+}
+ol > * {
+    text-decoration: none;
+    user-select: none;
 }
 h1 {
     font-size: 2.5rem;
@@ -58,13 +65,14 @@ h5 {
     font-size: 1rem;
 }
 
-
-
 body {
     background-color: var(--night);
     overflow-x: hidden;
     margin: 1rem;
 }
+/* END GLOBALS */
+
+
 
 
 /* HEADER */
@@ -108,6 +116,7 @@ header > * {
 
 
 
+
 /* NAV */
 nav {
     justify-content: center;
@@ -139,9 +148,47 @@ nav > * {
 
 
 
+
 /* CONTENT */
+/* about */
+.content {
+    display: block;
+    margin: 3rem;
+}
+.whoAmI {
+    margin: 1rem 0 1rem 0;
+}
+.q1 {
+    color: var(--cambridge);
+}
+.defNeester {
+    margin: 1rem 0 0 2rem;
+    color: var(--amber);
+}
+.entryNee {
+    display: flex;
+}
+.nee {
+    margin: 0 0.25rem 0 0;
+}
+.neePronunc {
+    padding: 0.25rem 0 0 0;
+}
+.neeDef {
+    display: block;
+}
+.neeArt {
+    font-style: italic;
+    font-size: 0.75rem;
+}
+.neeDefLines > li {
+    font-size: 0.75rem;
+}
+
+/* END about */
 
 /* END CONTENT */
+
 
 
 
@@ -149,7 +196,7 @@ nav > * {
 .socials {
     display: flex;
     max-height: 5rem;
-    margin: 3rem 0 0 0;
+    margin: 3rem 1rem 0 1rem;
     align-items: center;
     justify-content: space-between;
 }
@@ -163,6 +210,9 @@ nav > * {
     max-height: 3rem;
 }
 .goodreads > img {
+    max-height: 1.25rem;
+}
+.linkedIn > img {
     max-height: 1.5rem;
 }
 /* END SOCIALS */
