--- a/src/styles.css
+++ b/src/styles.css
@@ -222,7 +222,7 @@ nav > * {
 }
 .neePronunc {
     font-size: 0.9rem;
-    padding: 0.25rem 0 0 0;
+    padding: 0 0 0 0;
 }
 .neeDef {
     display: block;
@@ -294,4 +294,5 @@ nav > * {
 } */
 
 /* @media only screen and (max-width: 599px) {
+
 } */
