--- a/src/styles.css
+++ b/src/styles.css
@@ -113,6 +113,47 @@ header > * {
     margin: 0 1rem 0 0;
 }
 
+
+
+/* weather app */
+
+.weatherDiv {
+    height: 8rem;
+    width: 8rem;
+    padding: 0.25rem;
+    border-radius: 0.2rem;
+    margin-left: 10rem;
+
+    float: right;
+
+    background-color: rgb(141, 138, 204);
+}
+.weatherDiv > .temp {
+    color: white;
+    font-family: var(--Anta);
+}
+.weatherDiv > .condition {
+    font-size: 0.75rem;
+}
+.weatherDiv > .city {
+    text-align: center;
+    color:white;
+}
+.weatherDivHide {
+    display: none;
+}
+.iconDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* .iconDiv > img {
+    scale: 0.85;
+} */
+.weatherDiv > .city {
+    font-size: 1rem;
+}
+/* end WEATHER APP */
 /* END HEADER */
 
 
